// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductOverview component renders correctly with Recaptcha 1`] = `
<div>
  <div
    class="ProductOverview"
    data-testid="product-overview"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
      data-testid="grid-container"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-12 MuiGrid2-grid-lg-8 Grid-item css-q3jl1y-MuiGrid2-root"
        data-testid="grid-item"
      >
        <div
          class="css-2bw4l8"
          data-testid="media-gallery-root"
        >
          <div
            class=" css-79elbk"
            data-testid="media-gallery-media-wrapper"
          >
            <img
              class="MediaGallery-mainImageWrappershort css-ztt6nc-Media"
              data-testid="media-gallery-media"
              src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
            />
            <div
              class="css-gy9mja"
              data-testid="media-gallery-caption-text"
            >
              <p
                class="MuiTypography-root MuiTypography-h6 css-1s1oev7-MuiTypography-root"
                data-testid="typography"
              >
                <span
                  class="LinesEllipsis  Truncate-root css-13o7eu2"
                >
                  This is image caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="css-1tlzhc3"
            data-testid="thumbnails-root"
          >
            <button
              aria-label="Scroll left"
              class="MuiButtonBase-root  ThumbScrollerButton-left css-1qq5z22-MuiButtonBase-root"
              data-testid="thumbnail-scroller-left"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                data-testid="ChevronLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Scroll right"
              class="MuiButtonBase-root MediaGallery-thumbScrollerHidden ThumbScrollerButton-right css-1qq5z22-MuiButtonBase-root"
              data-testid="thumbnail-scroller-right"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                data-testid="ChevronRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <div
              class="css-1ojsfml"
              data-testid="thumbnail-scroller"
              style="margin-right: 0%;"
            >
              <button
                class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-selected Thumbnail-large Thumbnail-selected css-1ojnbyf-MuiButtonBase-root"
                data-gtm="{"id":"media-gallery1","label":"undefined","action":"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class=" css-7mgsqw-Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
              </button>
              <button
                class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-large css-1ojnbyf-MuiButtonBase-root"
                data-gtm="{"id":"media-gallery1","label":"undefined","action":"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class=" css-7mgsqw-Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-large css-1ojnbyf-MuiButtonBase-root"
                data-gtm="{"id":"media-gallery1","label":"test video","action":"[object Object]"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <div
                  aria-label="MC: media.video"
                  class="css-z7rmfo"
                >
                  <div
                    class="css-t93cf4"
                  >
                    <div
                      class="css-1y1tflw"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19q1qvb-MuiSvgIcon-root"
                        data-testid="PlayArrowIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 5v14l11-7z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1ezfe9h-MuiTypography-root"
                      data-testid="typography"
                    >
                      MC: media.video
                    </p>
                  </div>
                  <div
                    class="css-156fqrw"
                  />
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-12 MuiGrid2-grid-lg-4 Grid-item css-s496v0-MuiGrid2-root"
        data-testid="grid-item"
      >
        <div
          class="css-7tl8sb"
          data-testid="product-overview-pane"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 Typography-underline css-22inrc-MuiTypography-root"
            data-testid="typography"
          >
            name
          </h1>
          <ul
            class="css-1wqu3mc"
            data-testid="product-overview-pane-attributes"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 keyAssetTypesDownload css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
            data-testid="recaptcha-privacy-policy-link"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
            data-testid="recaptcha-terms-of-service-link"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders correctly without Recaptcha 1`] = `
<div>
  <div
    class="ProductOverview"
    data-testid="product-overview"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
      data-testid="grid-container"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-12 MuiGrid2-grid-lg-8 Grid-item css-q3jl1y-MuiGrid2-root"
        data-testid="grid-item"
      >
        <div
          class="css-2bw4l8"
          data-testid="media-gallery-root"
        >
          <div
            class=" css-79elbk"
            data-testid="media-gallery-media-wrapper"
          >
            <img
              class="MediaGallery-mainImageWrappershort css-ztt6nc-Media"
              data-testid="media-gallery-media"
              src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
            />
            <div
              class="css-gy9mja"
              data-testid="media-gallery-caption-text"
            >
              <p
                class="MuiTypography-root MuiTypography-h6 css-1s1oev7-MuiTypography-root"
                data-testid="typography"
              >
                <span
                  class="LinesEllipsis  Truncate-root css-13o7eu2"
                >
                  This is image caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="css-1tlzhc3"
            data-testid="thumbnails-root"
          >
            <button
              aria-label="Scroll left"
              class="MuiButtonBase-root  ThumbScrollerButton-left css-1qq5z22-MuiButtonBase-root"
              data-testid="thumbnail-scroller-left"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                data-testid="ChevronLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Scroll right"
              class="MuiButtonBase-root MediaGallery-thumbScrollerHidden ThumbScrollerButton-right css-1qq5z22-MuiButtonBase-root"
              data-testid="thumbnail-scroller-right"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                data-testid="ChevronRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <div
              class="css-1ojsfml"
              data-testid="thumbnail-scroller"
              style="margin-right: 0%;"
            >
              <button
                class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-selected Thumbnail-large Thumbnail-selected css-1ojnbyf-MuiButtonBase-root"
                data-gtm="{"id":"media-gallery1","label":"undefined","action":"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class=" css-7mgsqw-Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
              </button>
              <button
                class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-large css-1ojnbyf-MuiButtonBase-root"
                data-gtm="{"id":"media-gallery1","label":"undefined","action":"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class=" css-7mgsqw-Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-large css-1ojnbyf-MuiButtonBase-root"
                data-gtm="{"id":"media-gallery1","label":"test video","action":"[object Object]"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <div
                  aria-label="MC: media.video"
                  class="css-z7rmfo"
                >
                  <div
                    class="css-t93cf4"
                  >
                    <div
                      class="css-1y1tflw"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19q1qvb-MuiSvgIcon-root"
                        data-testid="PlayArrowIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 5v14l11-7z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1ezfe9h-MuiTypography-root"
                      data-testid="typography"
                    >
                      MC: media.video
                    </p>
                  </div>
                  <div
                    class="css-156fqrw"
                  />
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-12 MuiGrid2-grid-lg-4 Grid-item css-s496v0-MuiGrid2-root"
        data-testid="grid-item"
      >
        <div
          class="css-7tl8sb"
          data-testid="product-overview-pane"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 Typography-underline css-22inrc-MuiTypography-root"
            data-testid="typography"
          >
            name
          </h1>
          <ul
            class="css-1wqu3mc"
            data-testid="product-overview-pane-attributes"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders with default image if there are no images, videos nor visualiser media 1`] = `
<div>
  <div
    class="ProductOverview"
    data-testid="product-overview"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
      data-testid="grid-container"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-12 MuiGrid2-grid-lg-8 Grid-item css-q3jl1y-MuiGrid2-root"
        data-testid="grid-item"
      >
        <div
          class="css-2bw4l8"
          data-testid="media-gallery-root"
        >
          <div
            class=" css-79elbk"
            data-testid="media-gallery-media-wrapper"
          >
            <svg
              class="MediaGallery-mainImageWrappershort css-ztt6nc-Media"
              data-testid="media-gallery-media"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-12 MuiGrid2-grid-lg-4 Grid-item css-s496v0-MuiGrid2-root"
        data-testid="grid-item"
      >
        <div
          class="css-7tl8sb"
          data-testid="product-overview-pane"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 Typography-underline css-22inrc-MuiTypography-root"
            data-testid="typography"
          >
            name
          </h1>
          <ul
            class="css-1wqu3mc"
            data-testid="product-overview-pane-attributes"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 keyAssetTypesDownload css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
            data-testid="recaptcha-privacy-policy-link"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
            data-testid="recaptcha-terms-of-service-link"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;
